src/test/ui/consts/const-eval/panic-assoc-never-type.stderr
warning: any use of this value will cause an error
  --> $DIR/panic-assoc-never-type.rs:11:21
   |
LL |     const VOID: ! = panic!();
   |     ----------------^^^^^^^^-
   |                     |
   |                     the evaluated program panicked at 'explicit panic', $DIR/panic-assoc-never-type.rs:11:21
   |
note: the lint level is defined here
  --> $DIR/panic-assoc-never-type.rs:4:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^
   = note: this warning originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> $DIR/panic-assoc-never-type.rs:16:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
